<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/switch_container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/back"
        app:title="@string/switch_activity_title"
        app:titleCentered="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:checked="true"
        android:text="@string/label_1"
        android:textColor="@color/guide_text" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/label_2"
        android:textColor="@color/guide_text"
        app:thumbTint="@color/selector_checkbox"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/label_3"
        android:textColor="@color/guide_text"
        app:thumbIcon="@drawable/heart_plus_fill"
        app:thumbIconSize="12dp"
        app:thumbIconTint="@color/pink_strong" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/label_4"
        android:textColor="@color/guide_text"
        app:trackTint="@color/pink_strong" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/label_6"
        android:textColor="@color/guide_text"
        app:trackDecorationTint="@color/pink_strong" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/label_7"
        android:textColor="@color/guide_text"
        app:switchPadding="32dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:enabled="false"
        android:text="@string/label_8"
        android:textColor="@color/guide_text" />
</LinearLayout>